--- a/BookPoolV2/Views/Checkout/PlacedOrder.cshtml
+++ b/BookPoolV2/Views/Checkout/PlacedOrder.cshtml
@@ -18,7 +18,7 @@
             <h5 style="color: #173143;">
                 Order ID
             </h5>
-            <h5 style="color: #01B460;">#2342124232</h5>
+            <h5 style="color: #01B460;">#@(ViewBag.OrderNumber)</h5>
         </div>
 
 
