--- a/BookPoolV2/Views/Shared/_Layout.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 @{
     List<UsersAddress> userAddresses = ViewBag.UserAddresses as List<UsersAddress>;
 
-    List<UserCart> userCart = ViewBag.BooksInCart as List<UserCart>;
+    List<Dictionary<string, string>> userCookieCart = ViewBag.UserCartCookie as List<Dictionary<string, string>>;
 }
 
 <!DOCTYPE html>
@@ -278,22 +278,22 @@
 
 
     @*<div class="row" id="messageFooter">
-        <div id="messageFooterContainer">
-            <div id="messageFooterContainerLeft">
-                <div style="width:100%; height:25px; padding-top:5px;">
-                    <span id="itemsInCartFooter" style="color:white; letter-spacing:5px;"></span>
+            <div id="messageFooterContainer">
+                <div id="messageFooterContainerLeft">
+                    <div style="width:100%; height:25px; padding-top:5px;">
+                        <span id="itemsInCartFooter" style="color:white; letter-spacing:5px;"></span>
+                    </div>
+                    <div style="width:100%; height:25px; padding-top:5px;">
+                        <span id="costOfItemsInCartFooter" style="color:white; letter-spacing:5px;">LBP 8500</span>
+                    </div>
                 </div>
-                <div style="width:100%; height:25px; padding-top:5px;">
-                    <span id="costOfItemsInCartFooter" style="color:white; letter-spacing:5px;">LBP 8500</span>
+                <div id="messageFooterContainerRight">
+                    <div style="width:100%; height:55px; padding-top:15px; vertical-align:middle; text-align:right;">
+                        <span style="color:white;">View Cart <i class="material-icons white-text" style="vertical-align:middle;">play_arrow</i></span>
+                    </div>
                 </div>
             </div>
-            <div id="messageFooterContainerRight">
-                <div style="width:100%; height:55px; padding-top:15px; vertical-align:middle; text-align:right;">
-                    <span style="color:white;">View Cart <i class="material-icons white-text" style="vertical-align:middle;">play_arrow</i></span>
-                </div>
-            </div>
-        </div>
-    </div>*@
+        </div>*@
 
     <div class="navbarFooter" style="box-shadow: 0px 0 10px rgba(0, 0, 0, 0.8);">
         <div id="innerFooterContainer" style="margin:auto;">
@@ -486,45 +486,59 @@
             var bookID = $(this).attr('data-BookID');
             var bookPrice = $(this).attr('data-Price');
 
+            var alreadyInCart = false;
+
             if (!!$.cookie('Books')) {
                 var books = $.parseJSON($.cookie("Books"));
-                books.push(
-                    { 'BookID': bookID, 'Price': bookPrice }
-                );
-                $.cookie("Books", JSON.stringify(books), { path: '/' });
-            } else {
-                var books = [
-                    { 'BookID': bookID, 'Price': bookPrice }
-                ];
-                $.cookie("Books", JSON.stringify(books), { path: '/' });
+
+                $.each(books, function (k, v) {
+                    console.log('v.BookID = ' + v.BookID + ' | bookID = ' + bookID);
+                    if (v.BookID == bookID) {
+                        alreadyInCart = true;
+                    }
+                });
             }
 
+            if (alreadyInCart == false) {
 
-            //var booksInCartJson = $.parseJSON($.cookie("Books"));
-            //var booksInCart = [];
-            //$.each(booksInCartJson, function (k, v) {
-            //    console.log('V = ' + v.Price);
-            //    booksInCart.push(v.BookID);
-            //});
+                if (!!$.cookie('Books')) {
+                    var alreadyInCart = false;
+                    var books = $.parseJSON($.cookie("Books"));
 
-            $.ajax({
-                url: '@Url.Action("AddBookToCart","Home")',
-                type: 'POST',
-                dataType: 'json',
-                data: {
-                    BookID: bookID
-                },
-                success: function (data) {
-                    showItemsInCart();
-                },
-                error: function (request, error) {
-                    //location.reload();
+                    books.push(
+                        { 'BookID': bookID, 'Price': bookPrice }
+                    );
+
+                    $.cookie("Books", JSON.stringify(books), { path: '/' });
+                } else {
+                    var books = [
+                        { 'BookID': bookID, 'Price': bookPrice }
+                    ];
+                    $.cookie("Books", JSON.stringify(books), { path: '/' });
                 }
-            });
+
+                $.ajax({
+                    url: '@Url.Action("AddBookToCart","Home")',
+                    type: 'POST',
+                    dataType: 'json',
+                    data: {
+                        BookID: bookID
+                    },
+                    success: function (data) {
+                        showItemsInCart();
+                    },
+                    error: function (request, error) {
+
+                    }
+                });
+            }
+
         });
 
         function showItemsInCart() {
-            console.log($.cookie("Books"));
+
+            getCookieFromDatabase();
+
             var books = $.parseJSON($.cookie("Books"));
 
             if (books.length > 0) {
@@ -550,6 +564,11 @@
                 $('#costOfItemsInCartFooter').text(price);
                 $('#messageFooter').show();
             }
+        }
+
+        function getCookieFromDatabase() {
+            var userCookie = JSON.parse('@Html.Raw(Json.Encode(userCookieCart))');
+            $.cookie("Books", JSON.stringify(userCookie), { path: '/' });
         }
 
     </script>
