--- a/BookPoolV2/Views/Home/Product.cshtml
+++ b/BookPoolV2/Views/Home/Product.cshtml
@@ -105,10 +105,22 @@
                         </div>
                     </div>
                     <div class="col s12 m12 l3" style="padding-top:20px!important;">
-                        <div class="row addtoCart" data-BookID="@availableBook.ID" data-Price="@availableBook.Price" style="text-align: center; color: var(--primaryGrey);">
-                            <i class="material-icons" style="font-size: 50px; width:100%;">add_shopping_cart</i>
-                            <span>Add to cart</span>
-                        </div>
+                        @{
+                            if (Request.IsAuthenticated)
+                            {
+                                <div class="row addtoCart" data-BookID="@availableBook.ID" data-Price="@availableBook.Price" style="text-align: center; color: var(--primaryGrey);">
+                                    <i class="material-icons" style="font-size: 50px; width:100%;">add_shopping_cart</i>
+                                    <span>Add to cart</span>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="row sidenav-trigger" data-target="side-menu" style="text-align: center; color: var(--primaryGrey);">
+                                    <i class="material-icons" style="font-size: 50px; width:100%;">add_shopping_cart</i>
+                                    <span>Add to cart</span>
+                                </div>
+                            }
+                        }
                         <hr>
                         <div class="row gotouserbooks" style="text-align: center; color: var(--primaryGrey);">
                             <i class="material-icons" style="font-size: 50px; width:100%;">streetview</i>
