--- a/BookPoolV2/Views/Shared/_MyBook.cshtml
+++ b/BookPoolV2/Views/Shared/_MyBook.cshtml
@@ -57,7 +57,7 @@
                         }
                     }
                 </div>
-                <div style="float:right;position: absolute;right: 0;">
+                @*<div style="float:right;position: absolute;right: 0;">
                     @{
                         string averageRating = Model.AverageRating.ToString();
                         string backgroundColor = "transparent";
@@ -86,7 +86,7 @@
 
                         <span class="badge" style="color:white; background-color:@backgroundColor;">@averageRating</span>
                     }
-                </div>
+                </div>*@
             </div>
         </div>
     </div>
