--- a/BookPoolV2/Views/Checkout/Index.cshtml
+++ b/BookPoolV2/Views/Checkout/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using BookPool.DataObjects.DTO;
 @using BookPool.DataObjects.EDM;
+@using BookPoolV2.Global;
 
 @{
     Layout = "~/Views/Shared/_Layout_Out.cshtml";
@@ -102,30 +103,45 @@
     <div id="totalAmountContainer" style="margin-bottom:0px; background-color:white;" class="row">
         <div class="col s12 m12 l12">
             <h5>
-                Total Amount <span id="totalAmount" style="color:var(--primaryRed)">$0</span>
+                Total Amount <span id="totalAmount" style="color:var(--primaryRed)">0 L.L.</span>
             </h5>
+
         </div>
     </div>
 
     @{
         foreach (var book in booksInCart)
         {
-            <div class="col s12 m12 l12" style="overflow-x:auto;overflow-y:hidden;">
-                <form action="#">
-                    <p>
-                        <label>
-                            <input class="addToCheckout" value="@book.ID" data-Price="@book.Price" type="checkbox">
-                            <span>Add to checkout</span>
-                        </label>
-                    </p>
-                </form>
-                <div class="row itemslist">
-                    <div class="col s12 m6 l4" style="height:250px;overflow:hidden;margin-bottom:15px;">
-                        @Html.Partial("_CartBooks", book)
-                    </div>
+        <div class="col s12 m12 l12" style="overflow-x:auto;overflow-y:hidden;">
+            @{
+                if (book.SellingStatus == Globals.BookSellingStatus_Available)
+                {
+                    <form action="#">
+                        <p>
+                            <label>
+                                <input class="addToCheckout" value="@book.ID" data-Price="@book.Price" type="checkbox">
+                                <span>Add to checkout</span>
+                            </label>
+                        </p>
+                    </form>
+                }
+            }
+            <div class="row itemslist">
+                <div class="col s12 m6 l4" style="height:250px;overflow:hidden;margin-bottom:15px;">
+                    @Html.Partial("_CartBooks", book)
                 </div>
             </div>
-        }
+        </div>
+                }
+
+                if(booksInCart.Count() == 0)
+                {
+                    <div class="col s12 m12 l12">
+                        <h4>
+                            Your cart is still empty.
+                        </h4>
+                    </div>
+                }
     }
 
 
