--- a/BookPoolV2/Views/Home/Index.cshtml
+++ b/BookPoolV2/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using BookPool.DataObjects.DTO
 @using BookPool.DataObjects.EDM
+@using BookPoolV2.Global
 
 @{
     List<BookPoolResult> books = new List<BookPoolResult>();
@@ -86,7 +87,7 @@
     @{
         foreach (var book in books)
         {
-            if (book.OwnerUserID == null)
+            if (book.OwnerUserID == null || book.SellingStatus != Globals.BookSellingStatus_Available)
             {
                 <div class="col s12 m6 l4" style="height:250px;overflow:hidden;margin-bottom:15px;">
                     @Html.Partial("_UnavailableBook", book)
@@ -106,5 +107,13 @@
 <script>
     $(document).ready(function () {
         booksSection_active();
+    });
+
+    $(document).on('click', '.filterResults', function () {
+        var filterName = $(this).attr('data-Filter');
+        var filterValue = $(this).attr('data-Value');
+
+        var url = '@Url.Action("Index","Home")?' + filterName + "=" + filterValue;
+        window.location = url;
     });
 </script>
