--- a/BookPoolV2/Views/Shared/_Filter.cshtml
+++ b/BookPoolV2/Views/Shared/_Filter.cshtml
@@ -3,21 +3,21 @@
     <div class="row">
         <div class="col s12 m12 l12 noscroll" style="overflow:auto;">
             <div style="min-width: 800px;">
-                <div class="card horizontal smallfilter filterResults" data-Filter="Language" data-Value="english">
+                <div id="englishFilter" class="card horizontal smallfilter filterResults" data-Filter="Language" data-Value="english">
                     <div class="card-stacked">
                         <div class="card-content" style="padding: 2px 10px;">
                             <p>English</p>
                         </div>
                     </div>
                 </div>
-                <div class="card horizontal smallfilter filterResults" data-Filter="Language" data-Value="arabic">
+                <div id="arabicFilter" class="card horizontal smallfilter filterResults" data-Filter="Language" data-Value="arabic">
                     <div class="card-stacked">
                         <div class="card-content" style="padding: 2px 10px;">
                             <p>Arabic</p>
                         </div>
                     </div>
                 </div>
-                <div class="card horizontal smallfilter filterResults" data-Filter="Language" data-Value="french">
+                <div id="frenchFilter" class="card horizontal smallfilter filterResults" data-Filter="Language" data-Value="french">
                     <div class="card-stacked">
                         <div class="card-content" style="padding: 2px 10px;">
                             <p>French</p>
@@ -31,21 +31,21 @@
                         </div>
                     </div>
                 </div>*@
-                <div class="card horizontal smallfilter filterResults" data-Filter="Availability" data-Value="true">
+                <div id="availableOnlyFilter" class="card horizontal smallfilter filterResults" data-Filter="AvailableOnly" data-Value="true">
                     <div class="card-stacked">
                         <div class="card-content" style="padding: 2px 10px;">
                             <p>Available</p>
                         </div>
                     </div>
                 </div>
-                <div class="card horizontal smallfilter filterResults" data-Filter="sortByPrice" data-Value="true">
+                <div id="sortByPriceFilter" class="card horizontal smallfilter filterResults" data-Filter="sortByPrice" data-Value="true">
                     <div class="card-stacked">
                         <div class="card-content" style="padding: 2px 10px;">
                             <p>Sort by price</p>
                         </div>
                     </div>
                 </div>
-                <div class="card horizontal smallfilter filterResults" data-Filter="sortByPopularity" data-Value="true">
+                <div id="sortByPopularityFilter" class="card horizontal smallfilter filterResults" data-Filter="sortByPopularity" data-Value="true">
                     <div class="card-stacked">
                         <div class="card-content" style="padding: 2px 10px;">
                             <p>Sort by popularity</p>
